Update swagger.yaml
